aligned overflow-wrap, fix #2

--- a/properties/positive/overflow-wrap/css3/001.css
+++ b/properties/positive/overflow-wrap/css3/001.css
@@ -1,7 +1,5 @@
 a { overflow-wrap: normal; }
 b { overflow-wrap: break-word; }
-c { overflow-wrap: break-spaces; }
-d { overflow-wrap: break-word break-spaces; }
-e { overflow-wrap: break-spaces break-word; }
+c { overflow-wrap: anywhere; }
 y { overflow-wrap: inherit; }
 z { overflow-wrap: initial; }
